--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h1>404</h1>
-<p>Not found</p>
-<p><a href="{{ url_for('list') }}">Return home?</a></p>
+<div class="container">
+    <h1>404</h1>
+    <p>Uh oh, something went wrong! It looks like this entry or page does not exist.</p>
+    <p><a href="{{ url_for('list') }}">Return home</a>?</p>
+</div>
 {% endblock %}
