Add tags button to layout

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,7 @@
                         <a class="button icon-right" href="{{ url_for('register') }}"><span>Register</span> <i class="material-icons">assignment</i></a>
                         <a class="button icon-right" href="{{ url_for('login') }}"><span>Login</span> <i class="material-icons">lock_open</i></a>
                     {% endif %}
+                    <a class="button icon-right" href="{{ url_for('tag') }}"><span>Tags</span> <i class="material-icons">loyalty</i></a>
                 </div>
             </div>
         </header>
