Added disappearing login success message

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,5 +44,7 @@
                 <p>&copy; MyJournal</p>
             </div>
         </footer>
+    {% block scripts %}
+    {% endblock %}
     </body>
 </html>
