--- a/templates/index.html
+++ b/templates/index.html
@@ -17,3 +17,8 @@
     {% endif %}
 </div>
 {% endblock %}
+
+{% block scripts %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="{{ url_for('static', filename='js/hide_flash_message.js') }}"></script>
+{% endblock %}
